@@ -172,6 +172,9 @@ Release 0.3.0 - Unreleased
     HIVE-416. Fix backtrack in Hive.g
     (Zheng Shao via namit)
 
+    HIVE-442. Move the data before creating the partition.
+    (Prasad Chakka via zshao)
+
 Release 0.2.0 - Unreleased
 
   INCOMPATIBLE CHANGES
